--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+/test/fixtures/zdrofit_users.yml
+
+# Ignore VCR cassettes
+/spec/vcr_cassettes/.DS_Store
